# conti_bat_trigger

./: README.md  conti_activate_plug.kicad_pro  conti_activate_plug.kicad_sch
hw/: conti_activate_plug.kicad_pcb  conti_activate_plug.kicad_prl  conti_activate_plug.kicad_pro  conti_activate_plug.kicad_sch  fp-lib-table  sym-lib-table
hw/Library.pretty/: 1x02_P5.08mm.kicad_mod
keepalive_sw/: CMakeLists.txt  Readme.md
keepalive_sw/main/: CMakeLists.txt  Kconfig.projbuild  adc_meas.c  adc_meas.h  can_bus.c  can_bus.h  gpio_ctrl.c  gpio_ctrl.h  main.c  oled_display.c  oled_display.h  wake_trigger.c  wake_trigger.h  webserver.c  webserver.h  wifi_ap.c  wifi_ap.h
